--- a/css/admin.css
+++ b/css/admin.css
@@ -1,17 +1,25 @@
-/* midificar botones de bienvedido */
-.usuario-modificar{
-   justify-content: center;
+:root{
+  --color-main: #47874a;
 }
+
+/* -------------------- MENSAJE BIENVENIDA  ----------------------- */
 h5{
   text-align: center;
 }
-/* diseño del navbar */
-.letra {
-    color: #47874a;
-    font-size: 15px;
-  }
+.usuario-modificar{
+  justify-content: center;
+}
+/* -------------------- MENSAJE BIENVENIDA  ----------------------- */
+
+/* -------------------- HEADER  ----------------------- */
+.letra h3{
+  line-height: 90px;
+  text-align: right;
+  color: var(--color-main);
+}
   .imagen {
-    padding: 2px 5px 20px 0;
+    width: 200px;
+    float: left;
   }
   @media screen and (max-width: 640px) {
     .imagen {
@@ -25,10 +33,10 @@ h5{
       display: block;
     }
   }
-  /* ------------------------------ */
+  /* -------------------- HEADER  ----------------------- */
 
 
-  /* botes de inicio */
+/* -------------------- BOTONONES DE OPCION HEADER  ----------------------- */
 .btn-inicio{
     width: 150px;
     display: block;
@@ -37,128 +45,37 @@ h5{
     color: #f4f4f4;
     margin: 5px 2px;
   }
+/* -------------------- BOTONONES DE OPCION HEADER  ----------------------- */
   i{
     padding: 0 3px 0 0;
 }
 
-.barra-abajo{
-  margin-top: 25vh;
+/* -------------------- IMAGEN FOOTER  ----------------------- */
+.img-abajo {
+  margin: 10px auto 10px;
+  display: block;
 }
-  
-  /* imagen de abajo */
-  .img-abajo {
-    margin: 10px auto 10px;
-    display: block;
-  }
 
+.barra-abajo{
+  margin-top: 12vh;
+}
+/* -------------------- IMAGEN FOOTER  ----------------------- */
 
-/* diseño de galeria  ------------------------------------------------ */
 
   /* mover los a */
   .mover-a{
     float: right;
 }
 
-/* botes imaganes y videos */
-.boton1{
-  width: 100px;
-  border-radius: 10px;
-  background-color: #47874a;
-  color: #f4f4f4;
-  margin: 5px 2px;
-}
-.boton2{
-  width: 100px;
-  display: block;
-  border-radius: 10px;
-  background-color: #47874a;
-  color: #f4f4f4;
-  margin: 5px 2px;
-}
-
-/* botones editar eliminar */
+/* -------------------- BOTONES TABLA DE REGISTROS----------------------- */
 .boton3{
-  width: 100px;
-  border-radius: 10px;
-  background-color: #47874a;
-  color: #f4f4f4;
-  display: block;
-}
-i{
-    padding: 0 1px 0 0;
-}
-
-
-/* diseño de documentos------------------------------------------------------------ */
-
-/* mover los a */
-.mover-a{
-  float: right;
-}
-
-/* botes imaganes y videos */
-.boton1{
-width: 185px;
-border-radius: 10px;
-background-color: #47874a;
-color: #f4f4f4;
-margin: 5px 2px;
-}
-.boton2{
-width: 100px;
-display: block;
-border-radius: 10px;
-background-color: #47874a;
-color: #f4f4f4;
-margin: 5px 2px;
-}
-
-/* botones editar eliminar */
-.boton3{
-width: 100px;
+width: 120px;
 border-radius: 10px;
 background-color: #47874a;
 color: #f4f4f4;
 display: block;
 }
-
-
-/* diseño de categoria ---------------------------------------- */
-
-
-/* form    */
-.card-container.card {
-  /* max-width: 75%; */
-  border: none;
-}
-.card {
-  background-color: #ffffff;
-  padding: 0 0 5px;
-  margin: 0 auto 25px;
-  /* margin-top: 20vh; */
-}
-.form-signin #text {
-  height: 44px;
-  font-size: 16px;
-}
-.form-control:focus {
-  box-shadow: none;
-}
-
-.categoria-color {
-  background-color: #47874a;
-  color: #ffffff;
-  width: 180px;
-} 
-.form-signin button {
-  width: 100px;
-  display: block;
-  margin: 0 auto;
-  border-radius: 10px;
-  background-color: #47874a;
-  color: #f4f4f4;
-  font-size: 20px;
-}
+/* -------------------- BOTONES TABLA DE REGISTROS----------------------- */
 
 @media screen and (max-width: 640px) {
   .form-signin #text{
@@ -172,21 +89,8 @@ display: block;
 
 
 
-/* diseño de botones de comite --------------------------*/
- /* botones editar eliminar */
- .boton3{
-  width: 100px;
-  border-radius: 10px;
-  background-color: #47874a;
-  color: #f4f4f4;
-  display: block;
-}
 
-.form-signin #inputEmail,
-.form-signin #inputPassword {
-  height: 44px;
-  font-size: 16px;
-}
+/* -------------------- FORMULARIO INICIO DE SESIÓN----------------------- */
 .form-signin input[type="email"],
 .form-signin input[type="password"],
 .form-signin input[type="text"],
@@ -195,7 +99,6 @@ display: block;
   display: block;
   border-radius: 10px;
 }
-
 .btn-admin {
     border-radius: 0;
     height: 55px;
@@ -205,14 +108,45 @@ display: block;
     font-size: 20px;
 }
 .btn-admin:hover{
-    border: 1px solid #47874a;
-    color: #47874a;
+    color: #000;
 }
-.text-center{
-    color: #47874a;
+.card {
+  background-color: #ffffff;
+  padding: 0 0 5px;
+  margin: 0 auto 25px;
+}
+.form-signin #text {
+  height: 44px;
+  font-size: 16px;
+}
+.form-control:focus {
+  box-shadow: none;
 }
 
-/**PIO*/
+.form-signin button {
+  width: 100px;
+  display: block;
+  margin: 0 auto;
+  border-radius: 10px;
+  background-color: #47874a;
+  color: #f4f4f4;
+  font-size: 20px;
+}
+.card-container.card {
+  /* max-width: 75%; */
+  border: none;
+}
+/* -------------------- FORMULARIO INICIO DE SESIÓN------------------------- */
+
+/*---------------------- DISEÑO FORMULARIOS-----------------------*/
+.categoria-color {
+  background-color: #47874a;
+  color: #ffffff;
+  width: 180px;
+} 
+/*---------------------- DISEÑO FORMULARIOS-----------------------*/
+
+/* -------------------- TAMAÑO Y CENTRADO DE FORMULARIOS */
 .form{
   margin: 20px auto;
   max-width: 50vw;
@@ -220,3 +154,4 @@ display: block;
 .btn-form{
   width: 10vw;
 }
+/* -------------------- TAMAÑO Y CENTRADO DE FORMULARIOS */
