--- a/css/admin.css
+++ b/css/admin.css
@@ -95,17 +95,12 @@ display: block;
 .form-signin input[type="password"],
 .form-signin input[type="text"],
 .form-signin button {
-  width: 100%;
+  margin: 10px auto;
+  width: 90%;
   display: block;
-  border-radius: 10px;
 }
 .btn-admin {
-    border-radius: 0;
-    height: 55px;
-    margin-bottom: 10px;
-    background-color: #47874a;
-    color: #f4f4f4;
-    font-size: 20px;
+    width: 100%;
 }
 .btn-admin:hover{
     color: #000;
@@ -124,7 +119,7 @@ display: block;
 }
 
 .form-signin button {
-  width: 100px;
+  width: auto;
   display: block;
   margin: 0 auto;
   border-radius: 10px;
@@ -133,7 +128,6 @@ display: block;
   font-size: 20px;
 }
 .card-container.card {
-  /* max-width: 75%; */
   border: none;
 }
 /* -------------------- FORMULARIO INICIO DE SESIÓN------------------------- */
@@ -155,3 +149,109 @@ display: block;
   width: 10vw;
 }
 /* -------------------- TAMAÑO Y CENTRADO DE FORMULARIOS */
+input{
+  outline: none;
+}
+/* -------------------- VALIDAR FORMULARIOS -------------------------------*/
+.message{
+  background: var(--color-main);
+}
+.formInputError{
+	font-size: 16px;
+  color: #fff;
+	display: none;
+  background: #F66060;
+  height: auto;
+  padding-left: 10px;
+  width: 100%;
+  /* line-height: 30px; */
+  /* margin: 20px auto; */
+}
+.formMensaje{
+  height: 45px;
+  line-height: 45px;
+  background: #F66060;
+  padding: 0 15px;
+  border-radius: 3px;
+  font-size: 16px;
+  display: none;
+  color: #fff;
+  margin-bottom: 10px;
+}
+.formInputError-active{
+	display: block;
+}
+.formMensaje-active{
+	display: block;
+}
+.form-incorrecto input{
+	border: 1px solid #F66060;
+}
+.form-success input{
+	border: 1px solid #47874a;
+}
+.form-success-file input[type="file"]{
+  color: #47874a;
+  font-weight: bold;
+}
+
+.disabled-button{
+    cursor: not-allowed;
+    background-color: rgb(130, 130, 130) !important;
+    pointer-events:none;
+}
+
+.archivo-class{
+  padding-left: 10px;
+}
+
+/* PARA AGREGAR NOTICIAS Quill.js */
+.editor{
+  width: 100%;
+}
+/* PARA AGREGAR NOTICIAS Quill.js */
+/* -------------------- VALIDAR FORMULARIOS -------------------------------*/
+
+/* -------------------------------- GALERIA SELECCIÓN IMAGENES PARA NOTICIA ---------------------------------------- */
+.cuadro{
+  /* background-color: #F66060; */
+  /* margin: 20px auto; */
+  width: 1000px;
+  /* left: 500px; */
+}
+.gal{
+  padding: 10px;
+  background: #ccc;
+  /* width: 100px; */
+}
+div.image {
+  margin: 5px;
+  border: 1px solid #ccc;
+  float: left;
+  width: 180px;
+  }
+div.image img{
+  width: 100%;
+  height: 80px;
+  object-fit: cover;
+}
+
+/* ----- CHECKBOX PERSONALISADO -----------------------*/
+input[type="checkbox"] {
+  -ms-transform: scale(2); /* IE */
+  -moz-transform: scale(2); /* FF */
+  -webkit-transform: scale(2); /* Safari y Chrome */
+  -o-transform: scale(2); /* Opera */
+  margin: 10px;
+}
+.check{
+  font-size: 20px;
+}
+
+input[type="checkbox"]:checked + .check {
+  color: #2596be;
+  font-weight: bold;
+  /* background-color: #47874a; */
+}
+/* ----- CHECKBOX PERSONALISADO -----------------------*/
+/* -------------------------------- GALERIA SELECCIÓN IMAGENES PARA NOTICIA ---------------------------------------- */
