--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,454 +1,668 @@
 *{
-  margin: 0;
-  padding: 0;
-}
-
-.bc{
-  background: url("../img/fondo.jpg") no-repeat fixed center center;
-  background-size:cover;
-  background-color: whitesmoke;
-}
-
-.rra{
-  background-color: white;
-}
-
-.bg{
-  background-color: white;
-}
-
-/*Portada*/
-
-.container-portada{
-  width: 100%;
-  height: 400px;
-  position: relative;
-  background-image: url(../img/fondo.jpg); 
-  background-size: 120%;
-  animation: movimiento 20s infinite linear alternate;  
-}
-
-@keyframes movimiento{
-  from{
-      background-position: bottom left;
-  }to{
-      background-position: top right;
+    margin: 0;
+    padding: 0;
   }
-}
-
-.capa-gradient{
+  
+  .bc{
+    background: url("../img/fondo.jpg") no-repeat fixed center center;
+    background-size:cover;
+    background-color: whitesmoke;
+  }
+  
+  .rra{
+    background-color: white;
+  }
+  
+  .bg{
+    background-color: white;
+  }
+  
+  /*Portada*/
+  
+  .container-portada{
+    width: 100%;
+    height: 400px;
+    position: relative;
+    background-image: url(../img/fondo.jpg); 
+    background-size: 120%;
+    animation: movimiento 20s infinite linear alternate;  
+  }
+  
+  @keyframes movimiento{
+    from{
+        background-position: bottom left;
+    }to{
+        background-position: top right;
+    }
+  }
+  
+  .capa-gradient{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: -webkit-linear-gradient(left, black, #0672d0);
+    opacity: 0.5;
+  }
+  
+  .container-details{
+    width: 100%;
+    max-width: 1200px;
+    position: relative;
+    margin: auto;
+  }
+  
+  .details{
+    width: 100%;
+    max-width: 500px;
+    position: relative;
+    top: 20px;
+    color: white;
+  }
+  
+  .details h1{
+    font-size: 40px;
+    font-weight: 100;
+    margin-left: 50px;
+  }
+  
+  .details p{
+    margin-top: 10px;
+    font-size: 20px;
+    font-weight: 100;
+    margin-left: 50px;
+  }
+  
+  .details button{
+    padding: 10px 20px;
+    font-size: 16px;
+    background: none;
+    border-style: none;
+    border: 1px solid white;
+    color: white;
+    margin-top: 20px;
+    transition: background 300ms;
+    cursor: pointer;
+    margin-left: 50px;
+  }
+  
+  .details button:hover{
+    background: white;
+    color: black;
+  }
+  
+  
+  
+  @media screen and (max-width: 500px){
+    .details p{
+        font-size: 18px;
+    }
+  }
+  
+  
+  /*navbar*/
+  header {
+    height: 90px;
+    background: white;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+  }
+  
+  .icono {
+    display: none;
+  }
+  
+  .enlaces{
+    display: flex;
+    height: 100%;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 10px;
+  }
+  
+  .enlaces a {
+    border: 2px solid transparent;
+    padding: 4px 0;
+    transition: 1s ease-out;
+    color: #6AA803;
+    text-decoration: none;
+    font-size: 20px;
+  }
+  
+  
+  nav .logo {
+    margin-top: 10px;
+    height: 100%;
+  }
+  
+  nav .logo img {
+    object-fit: cover;
+    height: inherit;
+    width: 170px;
+  }
+  
+  header .textos {
+    text-align: left;
+    color: #fff;
+    margin-top: 150px;
+  }
+  
+  header .textos h1 {
+    font-size: 95px;
+    letter-spacing: 3px;
+    font-weight: 600;
+    margin-bottom: 10px;
+  }
+  
+  header .textos h2 {
+    font-size: 30px;
+    font-weight: 600;
+  }
+  
+  /*bodyeffect*/
+  .triangulo{
+    clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+  }
+  
+  .efctz{
+    overflow: hidden;
+    text-align: center;
+  }
+  
+  img{
+    max-width: 100%;
+    max-height: 100%;
+    transition: 0.75s;
+  }
+  .efctz:hover img{
+    transform: scale(1.2);
+  }
+  
+  /*documentos*/
+  
+  .bd{
+    display: inline;
+  }
+  
+  
+  /*footer*/
+  
+  footer {
   width: 100%;
-  height: 100%;
-  position: absolute;
-  background: -webkit-linear-gradient(left, black, #0672d0);
-  opacity: 0.5;
-}
-
-.container-details{
+  }
+  
+  .footer-container {
   width: 100%;
-  max-width: 1200px;
-  position: relative;
-  margin: auto;
-}
-
-.details{
-  width: 100%;
-  max-width: 500px;
-  position: relative;
-  top: 20px;
-  color: white;
-}
-
-.details h1{
-  font-size: 40px;
-  font-weight: 100;
-  margin-left: 50px;
-}
-
-.details p{
-  margin-top: 10px;
-  font-size: 20px;
-  font-weight: 100;
-  margin-left: 50px;
-}
-
-.details button{
-  padding: 10px 20px;
-  font-size: 16px;
-  background: none;
-  border-style: none;
-  border: 1px solid white;
-  color: white;
-  margin-top: 20px;
-  transition: background 300ms;
-  cursor: pointer;
-  margin-left: 50px;
-}
-
-.details button:hover{
   background: white;
   color: black;
-}
-
-
-
-@media screen and (max-width: 500px){
-  .details p{
-      font-size: 18px;
   }
-}
-
-
-/*navbar*/
-header {
-  height: 90px;
-  background: white;
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 20px;
-}
-
-.icono {
-  display: none;
-}
-
-.enlaces{
-  display: flex;
-  height: 100%;
+  
+  .footer-main {
   width: 100%;
-  justify-content: space-around;
-  align-items: center;
-  padding-top: 10px;
-}
-
-.enlaces a {
-  border: 2px solid transparent;
-  padding: 4px 0;
-  transition: 1s ease-out;
+  max-width: 1100px;
+  margin: auto;
+  padding: 50px 0;
+  display: flex;
+  flex-wrap: wrap;
+  }
+  
+  .footer-main .footer-columna1 {
+        width: 30%;
+        display: block;
+        margin-left: 0px;
+        margin-right: 0px;
+  }
+  
+  .footer-main .footer-columna {
+  width: calc(100% / 3);
+  text-align: justify;
+  }
+  
+  
+  .footer-main .footer-columna:nth-child(2) {
+  padding: 0 20px;
+  }
+  
+  .footer-main .footer-columna h3 {
+  font-size: 32px;
   color: #6AA803;
-  text-decoration: none;
-  font-size: 20px;
-}
+  margin-bottom: 20px;
+  }
+  
+  .footer-main .footer-columna span p {
+  display: inline-block;
+  margin-left: 5px;
+  margin-bottom: 15px;
+  font-family: Raleway;
+  }
+  
+  @media screen  and (max-width: 750px) {
+  .info-main {
+    padding: 30px 100px;
+  }
+  
+  .footer-main .footer-columna {
+    padding: 0 10px;
+  }
+  
+  .footer-main .footer-columna h3 {
+    font-size: 28px;
+  }
+  
+  .footer-main .footer-columna p {
+    font-size: 14px;
+  }
+  }
+  
+  @media screen  and (max-width: 640px) {
+  .info-main {
+    padding: 30px 30px;
+  }
+  
+  .info-main h3 {
+    font-size: 30px;
+  }
+  
+  .footer-main {
+    padding: 10px 0;
+  }
+  
+  .footer-main .footer-columna {
+    width: 100%;
+    text-align: center;
+    margin: 10px 0;
+  }
+  
+  .footer-main .footer-columna h3 {
+    margin-bottom: 5px;
+  }
+  
+  .footer-main .footer-columna span {
+    display: block;
+  }
+  }
+  
+  /*galeria*/
+  div.gallery {
+  margin: 5px;
+  border: 1px solid #ccc;
+  height: 220px;
+  }
+  .nom{
+    padding: 5px;
+  }
+  
+  div.gallery:hover {
+  border: 1px solid #777;
+  }
+  
+  div.gallery img {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+  }
+  
+  div.desc {
+  padding: 15px;
+  text-align: center;
+  }
+  /*galeria*/
+  
+  /*****estilo Peralta******/
+  
+  /*slider */
+  
+  .slider{
+      width: 100%;
+      margin: auto;
+      overflow: hidden;
+      height: 400px; /* originalmente 600px */
+      position: relative;
+  }
+  
+  .slider ul{
+      display: flex;
+      padding: 0;
+      width: 200%;
+  
+      animation: cambio 20s infinite;
+  }
+  
+  .slider li{
+      width: 100%;
+      list-style: none;
+  }
+  
+  .slider img{
+      width: 100%;
+  }
+  
+  @keyframes cambio{
+      0% {margin-left: 0;}
+      20% {margin-left: 0;}
+  
+      25% {margin-left: -100%;}
+      40% {margin-left: -100%;}
+  
+  }
+  
+  /*slider*/
+  
+  /*card*/
+  
+     
+     /* .card{
+          width: 20%;
+          display: inline-block;
+          box-shadow: 2px 2px 20px black;
+          border-radius: 5px; 
+          margin: 2%;
+         } */
+  
+  
+         .card1{
+          width: 20%;
+          display: inline-block;
+          box-shadow: 2px 2px 20px black;
+          border-radius: 5px; 
+          margin: 1%;
+         }
+  
+     .image img{
+       width: 100%;
+       border-top-right-radius: 5px;
+       border-top-left-radius: 5px;
+      }
+     
+     .title{
+      /* background-color: #6AA803; */
+       text-align: center;
+       padding: 5px;
+       height: auto;
+       
+      }
+    .art{
+      height: 500px;
+    }
+     .des{
+       /* background-color: #0672d0; */
+       padding: 3px;
+       text-align: justify;
+       padding-top: 5px;
+       height: 240px;
+     }
+     .btn-more{
+       text-align: center;
+       margin-bottom: 10px;
+     }
+     button{
+       margin-top: 40px;
+       margin-bottom: 10px;
+       background-color: white;
+       border: 1px solid white;
+       border-radius: 5px;
+       padding:10px;
+     }
+     button:hover{
+       background-color: transparent;
+       color: white;
+       transition: .5s;
+       cursor: pointer;
+     }
+  
+  /*gale*/
+  
+  /*documentos*/
+  .sl-slider-wrapper {
+      width: 100%;
+      height: 500px; /* originalmente 600px */
+      overflow: hidden;
+      position: relative;
+  }
+  
+  
+  /************************/
+  
+  /*---------------------------------LOGIN-----------------------------------------------*/
+  .err-admin{
+    color: red;
+  }
+  /*---------------------------------LOGIN-----------------------------------------------*/
+  
+  /* ------------------ FORMULARIO LOGIN - admin.php ----------------------------------*/
+  .login_box {
+    border: 3px solid #f4f4f4;
+    padding-left: 15px;
+    margin-bottom: 25px;
+  }
+  .logo {
+    padding: 10px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .card-container.card {
+    max-width: 600px;
+  }
+  
+  .card {
+    background-color: #ffffff;
+    padding: 1px 25px 30px;
+    /* margin: 0 auto 25px; */
+    /* margin-top: 15px; */
+  }
+  /* ------------------ FORMULARIO LOGIN - admin.php ----------------------------------*/
 
 
-nav .logo {
-  margin-top: 10px;
-  height: 100%;
-}
-
-nav .logo img {
+/* --------------------------- CORRECIÓN ESTILOS IMÁGENES INICIO DESPUÉS DE CONEXIÓN ------------------------ */
+.img-destacados{
+  width: 300px;
+  height: 200px;
   object-fit: cover;
-  height: inherit;
-  width: 170px;
+  margin-right: 10px;
 }
-
-header .textos {
-  text-align: left;
-  color: #fff;
-  margin-top: 150px;
-}
-
-header .textos h1 {
-  font-size: 95px;
-  letter-spacing: 3px;
-  font-weight: 600;
-  margin-bottom: 10px;
-}
-
-header .textos h2 {
-  font-size: 30px;
-  font-weight: 600;
-}
-
-/*bodyeffect*/
-.triangulo{
-  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-}
-
-.efctz{
-  overflow: hidden;
-  text-align: center;
-}
-
-img{
-  max-width: 100%;
-  max-height: 100%;
-  transition: 0.75s;
-}
-.efctz:hover img{
-  transform: scale(1.2);
-}
-
-/*documentos*/
-
-.bd{
-  display: inline;
-}
-
-
-/*footer*/
-
-footer {
-width: 100%;
-}
-
-.footer-container {
-width: 100%;
-background: white;
-color: black;
-}
-
-.footer-main {
-width: 100%;
-max-width: 1100px;
-margin: auto;
-padding: 50px 0;
-display: flex;
-flex-wrap: wrap;
-}
-
-.footer-main .footer-columna1 {
-      width: 30%;
-      display: block;
-      margin-left: 0px;
-      margin-right: 0px;
-}
-
-.footer-main .footer-columna {
-width: calc(100% / 3);
-text-align: justify;
-}
-
-
-.footer-main .footer-columna:nth-child(2) {
-padding: 0 20px;
-}
-
-.footer-main .footer-columna h3 {
-font-size: 32px;
-color: #6AA803;
-margin-bottom: 20px;
-}
-
-.footer-main .footer-columna span p {
-display: inline-block;
-margin-left: 5px;
-margin-bottom: 15px;
-font-family: Raleway;
-}
-
-@media screen  and (max-width: 750px) {
-.info-main {
-  padding: 30px 100px;
-}
-
-.footer-main .footer-columna {
-  padding: 0 10px;
-}
-
-.footer-main .footer-columna h3 {
-  font-size: 28px;
-}
-
-.footer-main .footer-columna p {
-  font-size: 14px;
-}
-}
-
-@media screen  and (max-width: 640px) {
-.info-main {
-  padding: 30px 30px;
-}
-
-.info-main h3 {
-  font-size: 30px;
-}
-
-.footer-main {
-  padding: 10px 0;
-}
-
-.footer-main .footer-columna {
-  width: 100%;
-  text-align: center;
-  margin: 10px 0;
-}
-
-.footer-main .footer-columna h3 {
-  margin-bottom: 5px;
-}
-
-.footer-main .footer-columna span {
-  display: block;
-}
-}
-
-/*galeria*/
-div.gallery {
-margin: 5px;
-border: 1px solid #ccc;
-float: left;
-width: 275px;
-}
-
-div.gallery:hover {
-border: 1px solid #777;
-}
-
-div.gallery img {
+.img-news_more{
   width: 100%;
   height: 150px;
   object-fit: cover;
 }
-
-div.desc {
-padding: 15px;
-text-align: center;
+.sec-noti-img{
+  width: 100%;
+  height: 280px;
+  object-fit: cover;
 }
-/*galeria*/
-
-/*****estilo Peralta******/
-
-/*slider */
-
-.slider{
-	width: 100%;
-	margin: auto;
-	overflow: hidden;
-    height: 400px; /* originalmente 600px */
-    position: relative;
+.noticias{
+  /* background-color: aquamarine; */
+  height: 420px;
+  margin-bottom: 10px;
 }
-
-.slider ul{
-	display: flex;
-	padding: 0;
-	width: 200%;
-
-	animation: cambio 20s infinite;
+.titulo-more{
+  text-align: center;
+  height: 50px;
+}
+.desc-more{
+  /* background-color: #6AA803; */
+  height: 150px;
+}
+.sec-galeria{
+  /* background-color: #0672d0; */
+  margin: 10px auto;
+  max-width: 95%;
 }
 
-.slider li{
-	width: 100%;
-	list-style: none;
+.sect-doc{
+  padding: 0;
+}
+.sec-documento{
+  margin: 5px;
+  /* background-color: red; */
+  /* margin: 50px auto; */
+  /* max-width: 90%; */
 }
 
-.slider img{
-	width: 100%;
+.sec-docs{
+  width: auto;
+}
+.doc-title{
+  padding-top: 20px;
+  margin: 0;
+}
+.documento{
+  margin-right: 0;
+  margin-bottom: 10px;
+  /* background-color: #0672d0; */
+  height: 215px;
+}
+.icon-doc{
+  margin-top: 10px;
+  float: left;
+  width: 80px;
+  height: auto;
+  object-fit: cover;
+}
+.clear{
+  clear: both;
+}
+.doc-desc{
+  padding-right: 10px;
+  padding-left: 10px;
+  /* padding: 10px; */
 }
 
-@keyframes cambio{
-	0% {margin-left: 0;}
-	20% {margin-left: 0;}
-
-	25% {margin-left: -100%;}
-	40% {margin-left: -100%;}
-
+.enlace-not{
+  color: #000;
+}
+.enlace-not:hover{
+  color: #47874a;
 }
 
-/*slider*/
+.noticia{
+  height: auto;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-template-areas: "titulo titulo titulo"
+                        "imagen imagen detalles"
+                        "contenido contenido contenido"
+                        "mas mas mas";
 
-/*card*/
-
-   
-   /* .card{
-		width: 20%;
-		display: inline-block;
-		box-shadow: 2px 2px 20px black;
-		border-radius: 5px; 
-		margin: 2%;
-	   } */
-
-
-	   .card1{
-		width: 20%;
-		display: inline-block;
-		box-shadow: 2px 2px 20px black;
-		border-radius: 5px; 
-		margin: 1%;
-	   }
-
-   .image img{
-	 width: 100%;
-	 border-top-right-radius: 5px;
-	 border-top-left-radius: 5px;
-	 
-   
-	
-	}
-   
-   .title{
-	
-	 text-align: center;
-	 padding: 10px;
-	 
-	}
-   
-   h1{
-	 font-size: 20px;
-	}
-   
-   .des{
-	 padding: 3px;
-	 text-align: center;
-	
-	 padding-top: 10px;
-		   border-bottom-right-radius: 5px;
-	 border-bottom-left-radius: 5px;
-   }
-   button{
-	 margin-top: 40px;
-	 margin-bottom: 10px;
-	 background-color: white;
-	 border: 1px solid white;
-	 border-radius: 5px;
-	 padding:10px;
-   }
-   button:hover{
-	 background-color: transparent;
-	 color: white;
-	 transition: .5s;
-	 cursor: pointer;
-   }
-
-/*gale*/
-
-/*documentos*/
-.sl-slider-wrapper {
-    width: 100%;
-    height: 500px; /* originalmente 600px */
-    overflow: hidden;
-    position: relative;
+}
+.titulo{
+  grid-area: titulo;
+}
+.detalles{
+  grid-area: detalles;
+  margin: 10px;
+}
+.noticia-image{
+  grid-area: imagen;
+}
+.noticia-image img{
+  height: 350px;
+  object-fit: cover;
+}
+.contenido{
+  grid-area: contenido;
+  margin: 10px;
+  text-align: justify;
+}
+.more-img{
+  grid-area: mas;
+  margin: 10px;
+  padding-bottom: 20px;
+}
+.noti-img img{
+  width: 200px;
+  height: 150px;
+  object-fit: cover;
+  margin: 10px;
+  float: left;
+}
+.img{
+  padding-bottom: 20px;
+}
+.info{
+  padding-top: 40px;
 }
 
-
-/************************/
-
-/*---------------------------------LOGIN-----------------------------------------------*/
-.err-admin{
-  color: red;
+.imagen-noticia{
+  width: 200px;
+  height: 200px;
+  margin: 10px;
+  object-fit: cover;
+  float: left;
 }
-/*---------------------------------LOGIN-----------------------------------------------*/
 
-/* ------------------ FORMULARIO LOGIN - admin.php ----------------------------------*/
-.login_box {
-  border: 3px solid #f4f4f4;
-  padding-left: 15px;
-  margin-bottom: 25px;
+.btn-docCerrar{
+  text-align: right;
 }
-.logo {
+.docCerrar{
+  background-color: #47874a;
+  color: #fff;
   padding: 10px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-right: -15px;
+}
+.docCerrar:hover{
+  text-decoration: none;
+  color: #fff;
+  transition:  all 0.5s ease-out;
+  background-color: #245026;
 }
 
-.card-container.card {
-  max-width: 600px;
+/* ---------------------- PAGINADOR ----------------- */
+.paginacion{
+  padding: 10px;
+  text-align: center;
+}
+.paginacion a{
+  text-decoration: none;
+  font-size: 16px;
+}
+.paginacion a{
+  background: #9bb99c;
+}
+.paginacion a:hover{
+  background: #557457;
+  color: #fff;
 }
 
-.card {
-  background-color: #ffffff;
-  padding: 1px 25px 30px;
-  /* margin: 0 auto 25px; */
-  /* margin-top: 15px; */
+ul.paginador {
+  display: inline-block;
+  padding: 0;
+  margin: 0;
 }
-/* ------------------ FORMULARIO LOGIN - admin.php ----------------------------------*/
+
+ul.paginador li {display: inline;}
+
+ul.paginador li a {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  transition: background-color .3s;
+  border: 1px solid white;
+}
+
+.paginador li:first-child a {
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.paginador li:last-child a {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+ul.paginador li a.active {
+  background-color: #47874a;
+  color: white;
+  border: 1px solid var(--header-footer);
+}
+.disabled { 
+  pointer-events: none; 
+  cursor: default; 
+} 
+.disabled a{
+  background: #b6b9b6;
+}
+/* ---------------------- PAGINADOR ----------------- */
